routing and about page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,238 +1,5 @@
 <app-redirect-modal *ngIf="showModal" [url]="url"></app-redirect-modal>
 <app-header></app-header>
 <app-mobile-menu *ngIf="showMenu"></app-mobile-menu>
-<div class="image-hero super">
-  <div class="overlay">
-      <div class="text-area">
-          <hr id="top-line"/>
-          <h2 class="light black">WEAR A SHIRT</h2>
-          <h1 class="black">CHANGE THE WORLD</h1>
-          <hr id="bottom-line"/>
-          <br/>
-          <br/>
-          <br/>
-          <br/>
-          <button class="large-button" (click)="toggleModal('https://www.google.com')">FIND YOUR PERFECT SHIRT</button>
-        </div> <!--text-area-->
-        <div (click)="scroll(target)" class="scroll-indicator">
-            <img src="assets/images/down.svg"/>
-        </div>
-  </div><!-- End of Overlay -->
-</div><!-- end of image-hero-->
 
-<div class="container" id="target">
-  <app-information-bar></app-information-bar>
-
-  <div class="breaker-bar">
-    <hr id="left"/><h2>Change The Narrative</h2><hr id="right"/>
-  </div>
-
-  <div class="circle-bar">
-    <div (click)="toggleModal('https://www.cnn.com')" class="img-circle">
-      <div class="collection-wrapper">
-        <p>Batman Adoption</p>
-        <a href="#" >View All</a>
-      </div>
-      <img src="assets/images/shirt1.png"/>
-    </div>
-    <div (click)="toggleModal('https://www.bbc.com')" class="img-circle">
-      <div class="collection-wrapper">
-          <p>Vanquisher of Big Feelings</p>
-          <a href="#">View All</a>
-        </div>
-      <img src="assets/images/shirt3.png"/>
-    </div>
-    <div (click)="toggleModal('https://www.cbs.com')" class="img-circle">
-      <div class="collection-wrapper">
-        <p>Love Makes A Family</p>
-        <a href="#">View All</a>
-      </div>
-      <img src="assets/images/shirt2.png"/>
-    </div>
-    <div (click)="toggleModal('https://www.ge.com')" class="img-circle shirt4">
-      <div class="collection-wrapper">
-        <p>Just Mom</p>
-        <a href="#">View All</a>
-      </div>
-      <img src="assets/images/shirt4.png"/>
-    </div>
-  </div>
-
-  <div class="centered-paragraph-bar">
-    <p>We want you to join a movement to change how the world views fostering and adoption so no child goes without a forever family.  Until someone has the opportunity to experience adopting or fostering a child in need first hand the prospect of doing so can seem overwhelming, impractical or downright scary.  </p>
-    <p>In our own experience it is impossible to count the number of times we have heard say “I could never do what your doing, you must be some sort of angel”, or “You Adopted? So you didn’t want to have kids of your own?” or even “Why would you want to foster, aren’t those the kids no one wants?”. </p>
-    <p>We want to help start positive conversations which will give proud parents the opportunity to share the joys, challenges and realities of being a foster or adoptive family. Maybe if we can start enough of those conversations we can help find a home for every child. </p>
-  </div>
-
-  <div class="image-bar">
-    <div class="info-image">
-      <div class="image-area img1">
-        <img src="assets/images/happy1.jpg"/>
-      </div>
-      <div class="text-area">
-        <p><span>We want to start a positive movement by creating opportunities </span>for open, honest discussions of what it is really like to experience fostering or adopting a child</p>
-      </div>
-    </div>
-
-    <div class="info-image right">
-      <div class="image-area img2">
-          <img src="assets/images/happy2.jpg"/>
-      </div>
-      <div class="text-area">
-        <p><span>It is our goal to help everyone understand </span>not only the challenges children waiting for a forever home face, but the motivations of those who open their homes to these children in need</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="challenge-bar">
-    <div class="left">
-      <hr/>
-      <div class="text-area">
-        <h4 class="top-heading">Our Challenge</h4>
-        <h3>By The Numbers</h3>
-      </div>
-    </div>
-
-    <div class="right">
-      <div class="image-stat">
-        <div class="circle-image">
-          <img src="assets/images/graph.svg"/>
-        </div>
-
-        <div class="stat-area">
-          <h4 class="header">500,000</h4>
-          <p class="line">Children Who Are In Foster Care Today</p>
-        </div>
-      </div>
-
-      <div class="image-stat">
-        <div class="circle-image">
-          <img src="assets/images/letter.svg"/>
-        </div>
-
-        <div class="stat-area">
-          <h4 class="header">120,000</h4>
-          <p class="line">Kids Will Be Eligible For Adoption This Year</p>
-        </div>
-      </div>
-
-      <div class="image-stat">
-        <div class="circle-image">
-          <img src="assets/images/calendar.svg"/>
-        </div>
-
-        <div class="stat-area">
-          <h4 class="header">26,000</h4>
-          <p class="line">Teens Will Age Out Of Foster Care This Year</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="product-grid">
-    <h2> Ready to help change how the world thinks of fostering and adoption?</h2>
-    <div class="stc">
-      <a (click)="toggleModal()">SHOP OUR COLLECTION</a>
-    </div>
-    <div class="the-grid">
-      <div class="product-cell">
-        <div class="collection-wrapper">
-          <p>Unbreakable</p>
-          <a href="#">View All</a>
-        </div>
-        <div class="image-wrapper">
-            <img src="assets/images/shirt7.png"/>
-        </div>
-      </div>
-
-      <div (click)="toggleModal()" class="product-cell">
-        <div class="collection-wrapper">
-            <p>Batman Adoption</p>
-            <a href="#">View All</a>
-          </div>
-        <div class="image-wrapper">
-            <img src="assets/images/shirt1.png"/>
-        </div>
-      </div>
-
-      <div (click)="toggleModal()" class="product-cell">
-        <div class="collection-wrapper">
-            <p>Vanquisher of Big Feelings</p>
-            <a href="#">View All</a>
-          </div>
-        <div class="image-wrapper">
-            <img src="assets/images/shirt3.png"/>
-        </div>
-      </div>
-
-      <div (click)="toggleModal()" class="product-cell">
-        <div class="collection-wrapper">
-            <p>Love Makes A Family</p>
-            <a href="#">View All</a>
-          </div>
-        <div class="image-wrapper">
-            <img src="assets/images/shirt2.png"/>
-        </div>
-      </div>
-
-      <div (click)="toggleModal()" class="product-cell">
-        <div class="collection-wrapper">
-            <p>Just Mom</p>
-            <a href="#">View All</a>
-          </div>
-        <div class="image-wrapper">
-            <img src="assets/images/shirt4.png"/>
-        </div>
-      </div>
-
-      <div (click)="toggleModal()" class="product-cell">
-        <div class="collection-wrapper">
-          <p>Not Built For Backing Down</p>
-          <a href="#">View All</a>
-        </div>
-        <div class="image-wrapper">
-            <img src="assets/images/shirt5.png"/>
-        </div>
-      </div>
-
-      <div (click)="toggleModal()" class="product-cell">
-        <div class="collection-wrapper">
-          <p>Strong</p>
-          <a href="#">View All</a>
-        </div>
-        <div class="image-wrapper">
-             <img src="assets/images/shirt6.png"/>
-        </div>
-      </div>
-  
-      <div (click)="toggleModal()" class="product-cell">
-        <div class="collection-wrapper">
-          <p>Change The Narrative Project</p>
-          <a href="#">View All</a>
-        </div>
-        <div class="image-wrapper">
-            <img src="assets/images/shirt8.png"/>
-        </div>
-      </div>
-
-      <div (click)="toggleModal()" class="product-cell odd-responsive">
-        <div class="collection-wrapper">
-          <p>Supergirl Adoption</p>
-          <a href="#">View All</a>
-        </div>
-          <div class="image-wrapper">
-              <img src="assets/images/shirt9.png"/>
-          </div>
-        </div>
-
-    </div>
-
-    <div class="call-2-action-row">
-        <div class="stc second-position">
-          <a (click)="toggleModal()">See All Designs</a>
-        </div>
-    </div>
-    
-  </div>
-</div> <!-- End of container-->
-
-
+<router-outlet></router-outlet>
