--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <img src="assets/images/logo.png"/>
 
     <div class="right-area">
-        <a>ABOUT US</a>
+        <a [routerLink] = "'/about'">ABOUT US</a>
         <button (click)="showModal()" class="sm-button">VISIT OUR STORE</button>
     </div>
     <div class="rmenu">
