--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -29,6 +29,7 @@
         }
         a {
             font-size: 18px;
+            text-decoration: none;
         }
         button {
             margin-left: 20px;
