--- a/src/app/redirect-modal/redirect-modal.component.less
+++ b/src/app/redirect-modal/redirect-modal.component.less
@@ -82,7 +82,8 @@
                 color: @link-blue;
                 font-weight: 500;
                 cursor: pointer;
-
+                text-decoration: none;
+                
                 &:hover {
                     color: #0093fd;
                 }
