preparing for first test launch

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,7 +11,7 @@
             <br/>
             
             </div> <!--text-area-->
-            <div (click)="scroll(target)" class="scroll-indicator">
+            <div (click)="scroll()" class="scroll-indicator">
                 <img src="assets/images/down.svg"/>
             </div>
     </div><!-- End of Overlay -->
