--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
             <br/>
             <button class="large-button" (click)="toggleModal('https://www.google.com')">FIND YOUR PERFECT SHIRT</button>
           </div> <!--text-area-->
-          <div (click)="scroll(target)" class="scroll-indicator">
+          <div (click)="scroll()" class="scroll-indicator">
               <img src="assets/images/down.svg"/>
           </div>
     </div><!-- End of Overlay -->
@@ -128,7 +128,7 @@
     <div class="product-grid">
       <h2> Ready to help change how the world thinks of fostering and adoption?</h2>
       <div class="stc">
-        <a (click)="toggleModal()">SHOP OUR COLLECTION</a>
+        <a (click)="toggleModal('https://www.google.com')">SHOP OUR COLLECTION</a>
       </div>
       <div class="the-grid">
         <div class="product-cell">
@@ -141,7 +141,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal()" class="product-cell">
+        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
           <div class="collection-wrapper">
               <p>Batman Adoption</p>
               <a>View All</a>
@@ -151,7 +151,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal()" class="product-cell">
+        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
           <div class="collection-wrapper">
               <p>Vanquisher of Big Feelings</p>
               <a>View All</a>
@@ -161,7 +161,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal()" class="product-cell">
+        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
           <div class="collection-wrapper">
               <p>Love Makes A Family</p>
               <a>View All</a>
@@ -171,7 +171,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal()" class="product-cell">
+        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
           <div class="collection-wrapper">
               <p>Just Mom</p>
               <a>View All</a>
@@ -181,7 +181,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal()" class="product-cell">
+        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
           <div class="collection-wrapper">
             <p>Not Built For Backing Down</p>
             <a>View All</a>
@@ -191,7 +191,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal()" class="product-cell">
+        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
           <div class="collection-wrapper">
             <p>Strong</p>
             <a>View All</a>
@@ -201,7 +201,7 @@
           </div>
         </div>
     
-        <div (click)="toggleModal()" class="product-cell">
+        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
           <div class="collection-wrapper">
             <p>Change The Narrative Project</p>
             <a>View All</a>
@@ -211,7 +211,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal()" class="product-cell odd-responsive">
+        <div (click)="toggleModal('https://www.google.com')" class="product-cell odd-responsive">
           <div class="collection-wrapper">
             <p>Supergirl Adoption</p>
             <a>View All</a>
