fixing size problem

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <img src="assets/images/logo.png"/>
+    <img [routerLink] = "'/'" src="assets/images/logo.png"/>
 
     <div class="right-area">
         <a [routerLink] = "'/about'">ABOUT US</a>
