--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -225,7 +225,7 @@
   
       <div class="call-2-action-row">
           <div class="stc second-position">
-            <a (click)="toggleModal()">See All Designs</a>
+            <a (click)="toggleModal('https://www.google.com')">See All Designs</a>
           </div>
       </div>
       
