--- a/src/styles.less
+++ b/src/styles.less
@@ -4,6 +4,8 @@
 
 body, html {
   font-family: @primary-font;
+  padding: 0px !important;
+  margin: 0px !important;
 }
 a, button {
   cursor: pointer;
