--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -13,7 +13,7 @@
         width: 200px;
         margin-left: 20px;
         margin-top: 7px;
-
+        cursor: pointer;
         @media screen and (max-width: 500px) {
             margin-left: 10px;
             width: 150px;
