--- a/src/app/mobile-menu/mobile-menu.component.less
+++ b/src/app/mobile-menu/mobile-menu.component.less
@@ -28,6 +28,8 @@
             font-size: 36px;
             display: block;
             margin-bottom: 20px;
+            text-decoration: none;
+            color: #333;
         }
     }
 }
