--- a/src/app/redirect-modal/redirect-modal.component.less
+++ b/src/app/redirect-modal/redirect-modal.component.less
@@ -4,14 +4,11 @@
 .overlay {
     background-color: rgba(255, 255, 255, .7);
     width: 100%;
-    height: 100vh;
+    height: 150vh;
     position: fixed;
     left: 0px;
     top: 0px;
     z-index: 9999;
-    display: flex;
-    align-content: center;
-    justify-content: center;
 
     .modal {
         width: 600px;
@@ -21,6 +18,8 @@
         border: @primary-color 3px solid;
         margin-top: 150px;
         position: relative;
+        left: 50%;
+        margin-left: -300px;
 
         h2 {
             font-size: 30px;
@@ -64,7 +63,7 @@
 
             @media screen and (max-width: 650px) {
                 width: 250px;
-                margin-left: -125px;
+                margin-left: -130px;
                 margin-top: 60px;
             }
 
@@ -114,7 +113,7 @@
             width: 300px;
             height: 475px;
             margin-top: 50px;
-            margin-left: 20px;
+            margin-left: -150px;
         }
     }
 }
