trying to fix a couple things in mobile view

--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -8,6 +8,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: absolute;
+    background-color: #FFF;
 
     img {
         width: 200px;
