--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -515,6 +515,7 @@ body, html {
       }
       @media screen and (max-width: 440px) {
         padding-left: 10px;
+        max-width: 300px;
       }
       .circle-image {
         width: 90px;
@@ -564,9 +565,10 @@ body, html {
         }
 
         @media screen and (max-width: 400px) {
+          max-width: 200px;
           .line {
             font-size: 15px;
-            width: 340px;
+            width: 300px;
           }
           .header {
             font-size: 32px;
