--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -31,32 +31,41 @@
         </div>
     </div>
 
-    <div class="information-bar about-content first-section">
-        <div class="left has-image">
+    <div class="left-image-side-by-side">
+
+        <div class="left">
             <div class="inner-wrapper">
                 <img src="../assets/images/tshirt-icon.png"/>
             </div>
         </div>
-        <div class="right no-image">
+
+        <div class="right">
             <div class="inner-wrapper">
                     <h2>Why T-Shirts?</h2>
                     <p>From our experience there are misconceptions around caring for children in need which are simply the result of the assumptions.  The trouble is that fostering and adopting children is an almost sudo-taboo topic we as a society tend to discuss very little.  We want to change that and what better way to start those conversation than with clean, positive, thought-provoking designs?  It is our goal to remove the stereotypes around caring for these children and drive positive conversations. </p>
             </div>
         </div>
+
     </div>
 
-    <div class="information-bar about-content">
-            <div class="left no-image">
-                <div class="inner-wrapper second-text">
-                    <h2>What Do We Use The Proceeds For?</h2>
-                    <p>Our goal is to get as much visibility to these designs as possible.  To support this goal we try to spread the message as far as we can using design branded merchandise, social media campaigns, ad purchases and more. It is the proceeds we earn from merchandise sales on this site which pay for the maintenance and advertising expense we occur.  We currently do not accept donations as we would love to keep the focus on starting conversations. </p>
-                </div>
-            </div>
-            <div class="right has-image">
-                <div class="inner-wrapper">
-                    <img id="ad-image" src="../assets/images/advertising-icon.png"/>
-                </div>
+
+
+    <div class="right-image-side-by-side">
+        <div class="left">
+            <div class="inner-wrapper">
+                <h2>What Do We Use The Proceeds For?</h2>
+                <p>Our goal is to get as much visibility to these designs as possible.  To support this goal we try to spread the message as far as we can using design branded merchandise, social media campaigns, ad purchases and more. It is the proceeds we earn from merchandise sales on this site which pay for the maintenance and advertising expense we occur.  We currently do not accept donations as we would love to keep the focus on starting conversations. </p>
             </div>
         </div>
+
+        <div class="right">
+            <div class="inner-wrapper">
+                <img id="ad-image" src="../assets/images/advertising-icon.png"/>
+            </div>
+        </div>
+
+    </div>
+
+
 
 </div>
