--- a/src/app/about/about.component.less
+++ b/src/app/about/about.component.less
@@ -1,6 +1,341 @@
 @heading-gray: #333333;
 @light-gray: #666666;
 
+
+.left-image-side-by-side {
+  padding-right: 30px;
+  padding-left: 30px;
+  position: relative;
+  top: 50px;
+  clear: both;
+
+  @media screen and (max-width: 1100px) {
+    top: -100px;
+  }
+  
+    .left {
+      float: left;
+      width: 600px;
+
+      @media screen and (max-width: 1315px) {
+        width:500px;
+      }
+      
+      @media screen and (max-width: 1100px) {
+        float: none;
+        width: 100%;
+
+      }
+
+    }
+    .right {
+      padding-right: 200px;
+
+      @media screen and (max-width: 1315px) {
+        padding-right: 100px;
+      }
+      @media screen and (max-width: 1100px) {
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 50px;
+        padding-right: 50px;
+      }
+      @media screen and (max-width: 1100px) {
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 25px;
+        padding-right: 25px;
+      }
+
+    }
+    .left, .right {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .inner-wrapper {
+          h2 {
+              font-weight: 300;
+              position: relative;
+              top: 30px;
+          }
+          img {
+              height: 300px;
+              position: relative;
+              left: 50%;
+              margin-left: -100px;
+
+              @media screen and (max-width: 1500px) {
+                top: 40px;
+              }
+              @media screen and (max-width: 1100px) {
+                margin-left: -150px;
+              }
+              
+              
+          }
+
+      }
+  }
+}
+
+.right-image-side-by-side {
+  padding-right: 30px;
+  padding-left: 30px;
+  position: relative;
+  top: 150px;
+  margin-bottom: 200px;
+  clear: both;
+  @media screen and (max-width: 1100px) {
+    top: 250px;
+  }
+    .left {
+      float: left;
+      margin-right: 600px;
+      padding-left: 200px;
+
+      @media screen and (max-width: 1315px) {
+        margin-right: 500px;
+      }
+
+      @media screen and (max-width: 1100px) {
+        float: none;
+        width: 100%;
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 50px;
+        padding-right: 50px;
+      }
+
+      @media screen and (max-width: 500px) {
+        float: none;
+        width: 100%;
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 25px;
+        padding-right: 25px;
+      }
+
+
+    }
+    .right {
+      width: 600px;
+      float: right;
+      position: relative;
+      top: -225px;
+      @media screen and (max-width: 1315px) {
+        width:500px;
+      }
+
+      
+      @media screen and (max-width: 1100px) {
+        float: none;
+        width: 100%;
+        top: -400px;
+      }
+    }
+    .left, .right {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .inner-wrapper {
+          h2 {
+              font-weight: 300;
+              position: relative;
+              top: 30px;
+          }
+          img {
+              height: 300px;
+              position: relative;
+              left: 50%;
+              margin-left: -200px;
+
+              @media screen and (max-width: 1533px) {
+                top: -60px;
+              }
+              @media screen and (max-width: 1100px) {
+                margin-left: -150px;
+                top: -80px;
+              }
+          }
+
+      }
+  }
+  .left {
+    @media screen and (max-width: 1100px) {
+      display: block;
+      width: 90%;
+    }
+    .inner-wrapper {
+      @media screen and (max-width: 1100px) {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 910px) {
+  .right-image-side-by-side, .left-image-side-by-side {
+    .inner-wrapper {
+      h2 {
+        font-size: 35px;
+        margin-bottom: 35px;
+      }
+    }
+  }
+  .right-image-side-by-side {
+    .left {
+      width: 87%;
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+
+  .right-image-side-by-side {
+    top: 220px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+
+  .right-image-side-by-side {
+    .left {
+      width: 85%;
+    }
+  }
+}
+
+@media screen and (max-width: 660px) {
+
+  .right-image-side-by-side {
+    .right {
+      .inner-wrapper {
+        img {
+          top: -100px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+
+  .right-image-side-by-side {
+    .right {
+      .inner-wrapper {
+        img {
+          top: -80px;
+        }
+      }
+    }
+  }
+  .right-image-side-by-side, .left-image-side-by-side {
+    .inner-wrapper {
+      p {
+        font-size: 14px;
+      }
+      h2 {
+        font-size: 30px;
+        margin-bottom: 35px;
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 570px) {
+
+  .right-image-side-by-side, .left-image-side-by-side {
+    .inner-wrapper {
+      h2 {
+        font-size: 23px;
+        margin-bottom: 35px;
+        font-weight: 700 !important;
+      }
+    }
+  }
+  .right-image-side-by-side {
+    top:160px;
+
+    .right {
+      .inner-wrapper {
+        img {
+          height: 225px;
+          margin-left: -110px;
+          top: -10px;
+        }
+      }
+    }
+  }
+  .left-image-side-by-side {
+    top: -70px;
+    .left {
+      .inner-wrapper {
+        img {
+          height: 225px;
+          margin-left: -110px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+
+  .left-image-side-by-side {
+    top: -50px;
+  }
+  .right-image-side-by-side {
+    top:190px;
+
+    .right {
+      .inner-wrapper {
+        img {
+          top: -30px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+
+  .right-image-side-by-side {
+    top:210px;
+
+    .right {
+      .inner-wrapper {
+        img {
+          top: -50px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .right-image-side-by-side {
+    top: -50px;
+    .right {
+      display: none;
+    }
+  }
+  .left-image-side-by-side {
+    .left {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .right-image-side-by-side {
+    top: -30px;
+  }
+  .left-image-side-by-side {
+    top:-30px;
+  }
+}
+
 .information-bar  {
     padding-right: 30px;
     padding-left: 30px;
@@ -47,30 +382,7 @@
 
             }
         }
-        .left.has-image {
 
-            .inner-wrapper {
-                position: relative;
-                top: 30px;
-                img {
-                    @media screen and (max-width: 1320px) and (min-width: 1200px) {
-                        position: absolute;
-                        top: 60px;   
-                        left: -700px; 
-                    }
-                    
-                }
-            }
-        }
-        .right.no-image {
-            .inner-wrapper {
-                @media screen and (max-width: 1320px) and (min-width: 1200px) {
-                    position: absolute;
-                    top: 340px;   
-                    left: 50%; 
-                } 
-            }
-        }
     }
     &.first-section {
         margin-bottom: 430px;
