--- a/src/styles.less
+++ b/src/styles.less
@@ -8,6 +8,9 @@ body, html {
   margin: 0px !important;
   overflow-x: hidden;
 }
+body {
+  overflow-y: hidden;
+}
 a, button {
   cursor: pointer;
 }
