--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
             <br/>
             <br/>
             <br/>
-            <button class="large-button" (click)="toggleModal('https://www.google.com')">FIND YOUR PERFECT SHIRT</button>
+            <button class="large-button" (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/')">FIND YOUR PERFECT SHIRT</button>
           </div> <!--text-area-->
           <div (click)="scroll()" class="scroll-indicator">
               <img src="assets/images/down.svg"/>
@@ -25,28 +25,28 @@
     </div>
   
     <div class="circle-bar">
-      <div (click)="toggleModal('https://www.cnn.com')" class="img-circle">
+      <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/mama+bear?collection=gBTlkhfCwp')" class="img-circle">
         <div class="collection-wrapper">
-          <p>Batman Adoption</p>
+          <p>Mama Bear</p>
           <a>View All</a>
         </div>
-        <img src="assets/images/shirt1.png"/>
+        <img src="assets/images/shirt10.png"/>
       </div>
-      <div (click)="toggleModal('https://www.bbc.com')" class="img-circle">
+      <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/vanquisher+of+big+feelings?collection=dIBpoKPOhk')" class="img-circle">
         <div class="collection-wrapper">
             <p>Vanquisher of Big Feelings</p>
             <a>View All</a>
           </div>
         <img src="assets/images/shirt3.png"/>
       </div>
-      <div (click)="toggleModal('https://www.cbs.com')" class="img-circle">
+      <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/love+makes+a+family?collection=VvuecwqBPn')" class="img-circle">
         <div class="collection-wrapper">
           <p>Love Makes A Family</p>
           <a>View All</a>
         </div>
         <img src="assets/images/shirt2.png"/>
       </div>
-      <div (click)="toggleModal('https://www.ge.com')" class="img-circle shirt4">
+      <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/just+mom?collection=rqAsdPbjtg')" class="img-circle shirt4">
         <div class="collection-wrapper">
           <p>Just Mom</p>
           <a>View All</a>
@@ -128,10 +128,10 @@
     <div class="product-grid">
       <h2> Ready to help change how the world thinks of fostering and adoption?</h2>
       <div class="stc">
-        <a (click)="toggleModal('https://www.google.com')">SHOP OUR COLLECTION</a>
+        <a (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/')">SHOP OUR COLLECTION</a>
       </div>
       <div class="the-grid">
-        <div class="product-cell">
+        <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/unbreakable?collection=icxTAcPDOF')" class="product-cell">
           <div class="collection-wrapper">
             <p>Unbreakable</p>
             <a>View All</a>
@@ -141,17 +141,17 @@
           </div>
         </div>
   
-        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
+        <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/mama+bear?collection=gBTlkhfCwp')" class="product-cell">
           <div class="collection-wrapper">
-              <p>Batman Adoption</p>
+              <p>Mama Bear</p>
               <a>View All</a>
             </div>
           <div class="image-wrapper">
-              <img src="assets/images/shirt1.png"/>
+              <img src="assets/images/shirt10.png"/>
           </div>
         </div>
   
-        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
+        <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/vanquisher+of+big+feelings?collection=dIBpoKPOhk')" class="product-cell">
           <div class="collection-wrapper">
               <p>Vanquisher of Big Feelings</p>
               <a>View All</a>
@@ -161,7 +161,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
+        <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/love+makes+a+family?collection=VvuecwqBPn')" class="product-cell">
           <div class="collection-wrapper">
               <p>Love Makes A Family</p>
               <a>View All</a>
@@ -171,7 +171,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
+        <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/just+mom?collection=rqAsdPbjtg')" class="product-cell">
           <div class="collection-wrapper">
               <p>Just Mom</p>
               <a>View All</a>
@@ -181,7 +181,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
+        <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/not+made+for+backing+down?collection=kdmDTcNShQ')" class="product-cell">
           <div class="collection-wrapper">
             <p>Not Built For Backing Down</p>
             <a>View All</a>
@@ -191,7 +191,7 @@
           </div>
         </div>
   
-        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
+        <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/strong?collection=RhLhXiXuYD')" class="product-cell">
           <div class="collection-wrapper">
             <p>Strong</p>
             <a>View All</a>
@@ -201,7 +201,7 @@
           </div>
         </div>
     
-        <div (click)="toggleModal('https://www.google.com')" class="product-cell">
+        <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/change+the+narrative+project?collection=tZPzlvtcAL')" class="product-cell">
           <div class="collection-wrapper">
             <p>Change The Narrative Project</p>
             <a>View All</a>
@@ -211,9 +211,9 @@
           </div>
         </div>
   
-        <div (click)="toggleModal('https://www.google.com')" class="product-cell odd-responsive">
+        <div (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/just+dad?collection=yeGceRxslP')" class="product-cell odd-responsive">
           <div class="collection-wrapper">
-            <p>Supergirl Adoption</p>
+            <p>Just Dad</p>
             <a>View All</a>
           </div>
             <div class="image-wrapper">
@@ -225,7 +225,7 @@
   
       <div class="call-2-action-row">
           <div class="stc second-position">
-            <a (click)="toggleModal('https://www.google.com')">See All Designs</a>
+            <a (click)="toggleModal('https://shop.spreadshirt.com/change-the-narrative-project/')">See All Designs</a>
           </div>
       </div>
       
