--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -229,5 +229,11 @@
           </div>
       </div>
       
+      <div class="social-bar">
+        <a class="social-block" href="https://twitter.com/ChangeTheNarra3">
+          <img src="assets/images/Twitter.svg"/> 
+          <a>Follow Us On Twitter</a>
+        </a>
+      </div>
     </div>
   </div> <!-- End of container-->
