--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -911,6 +911,44 @@ body, html {
     }
   }
 
+  .social-bar {
+    text-align: center;
+    padding-right: 42px;
+    height: 60px;
+    padding-top: 20px;
+    padding-bottom: 140px;
+
+    .social-block {
+      margin-left: 29px;
+      text-decoration: none !important;
+      img {
+        width: 50px;
+      }
+      a {
+        position: relative;
+        top: -16px;
+        padding-left: 10px;
+        font-size: 28px;
+        color:#FFF;
+        font-weight: 300;
+        text-decoration: none !important;
+      }
+    }
+
+    @media screen and (max-width: 440px) {
+      height: 20px;
+      .social-block {
+        img {
+          width: 30px;
+        }
+        a {
+          top: -10px;
+          padding-left: 10px;
+          font-size: 20px;
+        }
+      }
+    }
+  }
   
 
 } //End of Product Grid
