--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -21,12 +21,12 @@
     <div class="information-bar">
         <div class="left">
             <div class="inner-wrapper">
-                <h3><span class="bold">We envision a world where love defines family.</span> Where every family, child and parent gets to feel the love and security of a forever family. </h3>
+                <h3><span class="bold">We were constantly made aware of just how little</span> we and others knew about the challenges thousands of children and families face everyday. </h3>
             </div>
         </div>
         <div class="right">
             <div class="inner-wrapper">
-                <p class="content">To help this vision become reality we want to lead a movement to change how the world views fostering and adoption.  We want to break the mystery around what it means to open your family to fostering or adopting a child and lift the conversation out the stigma that is frequently associated with it today. </p>
+                <p class="content">Five years ago my wife and I became foster parents.  In our 20’s and without any experience as parents we went into the process blind.  Throughout the 1,003 days our now adopted son was in foster care we learned how many misconceptions we and so many others have about what it is like to be in foster care and to be a foster parent.  Since then it has been my goal to help break down these misconceptions and encourage more caring individuals and families to answer the call to help every child have a home.   </p>
             </div>
         </div>
     </div>
